fixed hero clipping

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ li:hover {
     width: auto;
     margin-bottom: 100px;
     display: flex;
-    padding:0;
+    padding-bottom: 50vh;
     align-items: center;
     justify-content: center;
     border-radius: 20px;
